--- a/src/components/BoxInfo/style.css
+++ b/src/components/BoxInfo/style.css
@@ -1,8 +1,34 @@
 .choice_box{
     position: relative;
-    top: 320px;
-    height: 700px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    top: 330px;
+    background-color: #f4dfc5;
+    padding: 30px 0;
+}
+.chose_title{
+    text-align: center;
+    padding: 50px 0;
+    font-size: 50px;
+    font-weight: 700;
+}
+.choice_id_box{
+    font-size: 65px;
+    font-weight: 700;
+    text-decoration: underline;
+}
+.choice_container{
+    margin: 5% 15%;
+}
+.choise_text{
+    width: 35%;
+    font-size: 30px;
+    font-weight: 700;
+    padding: 20px 15px;
+    border: 2px solid #fff;
+}
+.choise_data{
+    width: 65%;
+    font-size: 25px;
+    font-weight: 800;
+    padding: 20px 15px;
+    border: 2px solid #fff;
 }
