--- a/src/components/BoxInfo/style.css
+++ b/src/components/BoxInfo/style.css
@@ -17,16 +17,17 @@
 }
 .choice_container{
     margin: 5% 15%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    border: 3px solid #fff;
 }
 .choise_text{
-    width: 35%;
-    font-size: 30px;
     font-weight: 700;
+    font-size: 25px;
     padding: 20px 15px;
     border: 2px solid #fff;
 }
 .choise_data{
-    width: 65%;
     font-size: 25px;
     font-weight: 800;
     padding: 20px 15px;
