--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -3,7 +3,6 @@
     height: 400px;
     display: flex;
     justify-content: center;
-
 }
 
 .banner_img{
@@ -11,6 +10,8 @@
     width: 500px;
     height: 500px;
     background-image: url('../../../public/image/banner.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     box-shadow: 0 0 20px 0 #001;
     z-index: 10;
 }
@@ -67,5 +68,59 @@ title h1{
     }
     .button_banner{
         margin-top: 40px;
+    }
+}
+
+@media (max-width: 1099px) { 
+    .body_of_main{
+        align-items: center;
+        flex-direction: column;
+    }
+    .banner_img{
+        position: absolute;
+        width: 90%;
+        margin: 0px 5%;
+        z-index: 11;
+    }
+    .title{
+        width: 90%;
+        height: 700px;
+        margin-top: 400px;
+        margin-left: 5%;
+        font-size: 40px;
+        padding-top: 400px;
+        padding-bottom: 100px; 
+        padding-left: 5%;
+        text-align: left;
+    }
+
+ }
+
+ @media (max-width: 905px) { 
+    h1{
+        font-size: 30px;
+    }
+ }
+ @media (max-width: 805px) { 
+    .button_banner{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 35px;
+        width: 180px;
+        height: 45px;
+        background-color: #332e29;
+        color: #fff;
+        border-radius: 5px;
+        font-size: 20px;
+        font-weight: 500;
+        letter-spacing: 4px;
+        text-transform: uppercase;
+    }
+ }
+ @media (max-width: 485px) {
+    .banner_img{
+        width: 300px;
+        height: 400px;
     }
 }
