--- a/src/components/BoxInfo/style.css
+++ b/src/components/BoxInfo/style.css
@@ -38,3 +38,28 @@
     color: rgb(3, 78, 3);
     text-decoration: underline;
 }
+@media (max-width: 765px) {
+    .choice_box{
+        top: 380px;
+    }
+    .choice_container{
+        margin: 5% 5%;
+        grid-template-columns: 1fr;
+        border: 3px none #fff;
+    }
+    .chose_title{
+        padding: 30px 0;
+        font-size: 30px;
+    }
+    .choice_id_box{
+        font-size: 35px;
+    }
+    .choise_text{
+        font-size: 18px;
+
+    }
+    .choise_data{
+        font-size: 18px;
+        background: #fff;
+    }
+}
