--- a/src/components/Banner/style.css
+++ b/src/components/Banner/style.css
@@ -1,37 +1,34 @@
 .body_of_main{
     background: #f4dfc5;
-    height: 400px;
+    height: 350px;
     display: flex;
     justify-content: center;
 }
 
 .banner_img{
-    margin-top: 200px;
+    margin-top: 120px;
     width: 500px;
-    height: 500px;
+    height: 280px;
     background-image: url('../../../public/image/banner.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: 0 0 20px 0 #001;
     z-index: 10;
 }
-title h1{
-    font-weight: 800; 
-    font-size: 70px;
-    line-height: 2;
-    text-transform: uppercase;
+.title h1{
+    font-weight: 600; 
+    font-size: 45px;
 }
 
 .title{
     width: 55%;
-    height: 500px;
     background-color: #fff;
-    margin-top: 120px;
-    margin-left: -200px;
+    margin-top: 100px;
+    margin-left: -160px;
     z-index: 1;
-    font-size: 40px;
-    padding-left: 300px;
-    padding-top: 70px;
+    font-size: 35px;
+    padding-left: 280px;
+    padding-top: 40px;
     color: #332e29;    
 }
 
@@ -40,9 +37,9 @@ title h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 35px;
-    width: 250px;
-    height: 60px;
+    margin-top: 10px;
+    width: 230px;
+    height: 50px;
     background-color: #332e29;
     color: #fff;
     border-radius: 5px;
@@ -52,75 +49,71 @@ title h1{
     text-transform: uppercase;
 }
 
-@media(max-width: 1550px){
-    .title{
-        font-size: 20px;
-    }
-    h1{
-        font-size: 50px;
+@media (max-width: 1350px){
+    .title h1{
+        font-size: 35px;
     }
     .title{
-        font-size: 25px;
-    }
-    .banner_img{
-        width: 400px;
-        height: 400px;
-    }
-    .button_banner{
-        margin-top: 40px;
+        margin-left: -250px;
     }
 }
 
-@media (max-width: 1099px) { 
-    .body_of_main{
-        align-items: center;
-        flex-direction: column;
+@media (max-width: 1030px){
+    .title h1{
+        font-size: 30px;
     }
+}
+@media (max-width: 970px){
     .banner_img{
-        position: absolute;
-        width: 90%;
-        margin: 0px 5%;
-        z-index: 11;
+        margin: 60px 5%;
+        width: 120%;
+        height: 200px;
+    }
+    .title h1{
+        font-size: 35px;
     }
     .title{
         width: 90%;
-        height: 700px;
-        margin-top: 400px;
-        margin-left: 5%;
-        font-size: 40px;
-        padding-top: 400px;
-        padding-bottom: 100px; 
-        padding-left: 5%;
-        text-align: left;
+        margin-top: 220px;
+        margin-left: -450px;
+        padding-left: 50px;
+        padding-top: 40px;  
     }
-
- }
-
- @media (max-width: 905px) { 
-    h1{
-        font-size: 30px;
-    }
- }
- @media (max-width: 805px) { 
-    .button_banner{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 35px;
-        width: 180px;
-        height: 45px;
-        background-color: #332e29;
-        color: #fff;
-        border-radius: 5px;
-        font-size: 20px;
-        font-weight: 500;
-        letter-spacing: 4px;
-        text-transform: uppercase;
-    }
- }
- @media (max-width: 485px) {
+}
+@media (max-width: 600px){
     .banner_img{
-        width: 300px;
-        height: 400px;
+        margin: 10px 2%;
+        width: 90vw;
+        height: 150px;
+        
+    }
+    .title h1{
+        font-size: 35px;
+    }
+    .title{
+        width: 90%;
+        margin-top: 170px;
+        margin-left: -400px;
+        padding-left: 10px;
+        padding-top: 15px;  
+    }
+}
+@media (max-width: 400px){
+    .body_of_main{
+        height: 300px;
+    }
+    .banner_img{
+        position: relative;
+        left: -45px;
+        margin: 10px;
+        width: 90vw;
+        height: 120px; 
+    }
+    .title h1{
+        font-size: 28px;
+    }
+    .title{
+        position: relative;
+        left: 35px;  
     }
 }
