--- a/src/components/BoxInfo/style.css
+++ b/src/components/BoxInfo/style.css
@@ -1,22 +1,22 @@
 .choice_box{
     position: relative;
-    top: 330px;
+    top: 50px;
     background-color: #f4dfc5;
-    padding: 30px 0;
+    padding: 10px;
 }
 .chose_title{
     text-align: center;
-    padding: 50px 0;
-    font-size: 50px;
+    padding: 15px 0;
+    font-size: 45px;
     font-weight: 700;
 }
 .choice_id_box{
-    font-size: 65px;
-    font-weight: 700;
+    font-size: 50px;
+    font-weight: 800;
     text-decoration: underline;
 }
 .choice_container{
-    margin: 5% 15%;
+    margin: 20px 10%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     border: 3px solid #fff;
@@ -38,28 +38,39 @@
     color: rgb(3, 78, 3);
     text-decoration: underline;
 }
-@media (max-width: 765px) {
-    .choice_box{
-        top: 380px;
-    }
-    .choice_container{
-        margin: 5% 5%;
-        grid-template-columns: 1fr;
-        border: 3px none #fff;
-    }
+@media(max-width: 750px){
     .chose_title{
-        padding: 30px 0;
+        text-align: center;
+        padding: 15px 0;
         font-size: 30px;
+        font-weight: 700;
     }
     .choice_id_box{
         font-size: 35px;
+        font-weight: 800;
+        text-decoration: underline;
+    }
+    .choice_container{
+        margin: 10px 20px;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        border: 3px solid #fff;
+    }
+}
+@media(max-width: 600px){
+    .choice_container{
+        grid-template-columns: 1fr;
     }
     .choise_text{
-        font-size: 18px;
-
+        background: #fadebdfd;
+        color:#332e29;
     }
-    .choise_data{
-        font-size: 18px;
-        background: #fff;
+}
+@media(max-width: 500px){
+    .choice_box{
+        padding: 3px;
+    }
+    .choice_container{
+        margin: 10px 5px;
     }
 }
