--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,29 +1,25 @@
 .card_box{
-    width: 650px;
     height: 450px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    flex-direction: column;
     background-color: #f4dfc5;
     color: #332e29;
-    margin: 20px;
+    margin: 20px 0 20px 0;
 }
 
 .card_name{
     font-size: 25px;
-    display: flex;
-    justify-content: center;
     padding: 10px;
     text-transform: uppercase;
     font-weight: 600;
 }
 .text_card{
-    width: 400px;
+    width: 90%;
     height: 150px;
     font-size: 18px;
     font-weight: 500;
-    margin: 20px;
+    margin: 20px 5px;
     font-style: italic;
 }
 .link{
@@ -35,6 +31,15 @@
 .link:hover{
     font-weight: 700;
 }
-/* .card__icon{
-    background-image: url(../../image/load_file.png);
-} */
+@media (max-width: 700px){
+    .card_box{
+        /* height: 450px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center; */
+        flex-direction: column;
+        background-color: #f4dfc5;
+        color: #332e29;
+        margin: 20px 0 20px 0;
+    }
+}
