--- a/src/components/FindContainer/style.css
+++ b/src/components/FindContainer/style.css
@@ -1,37 +1,42 @@
 
 .container2{
-    height: 700px;
     background-color: #f4dfc5;
     position: relative;
-    top: 350px;
-    padding: 0 15%;
-    padding-bottom: 30px;
+    top: -10px;
+    padding: 5% 15%;
 }
-.instruction2{
-    padding: 30px 0;
+.title2__instruction{
+    color: #332e29;
+    font-size: 35px;
+    text-transform: uppercase;
+    padding: 20px 0;
+    margin: 50px;
 }
+.acordion{
+    color: #332e29;
+    font-size: 25px;
+    font-weight: 700;
+}
+
 .findf{
     width: 70%;
     padding: 0 15px;
 }
 .num_journal{
     text-align: center;
-    margin: 50px;
+    margin: 20px;
     padding: 20px 0;
     font-size: 50px;
     font-weight: 700;
     background-color: #f4dfc5;
 }
-.cards{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 50px 130px;
-}
 
-.bg_color{
-    background-color: #f4dfc5;
+
+.card_result{
     position: relative;
-    top: 300px;
+    top: -10px;
+    border-top: 2px solid #000;
+    background-color: #f4dfc5;
     padding: 0 5%;
 }
 .centred{
@@ -40,41 +45,28 @@
     justify-content: center;
 
 }
-@media (max-width: 1521px) { 
-    .cards{
-        gap: 20px 75px;
+@media (max-width: 1400px){
+    .title2__instruction{
+        font-size: 30px;
+        margin: 50px;
     }
- }
-
-@media (max-width: 1099px) {
     .num_journal{
         text-align: center;
+        margin: 5px;
+        padding: 10px 0;
+        font-size: 40px;
+    }
+}
+
+@media (max-width: 600px){
+    .title2__instruction{
+        font-size: 20px;
         margin: 50px;
-        padding: 20px 0;
-        font-size: 37px;
-        font-weight: 700;
-        background-color: #f4dfc5;
     }
-    .cards{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 40px 75px;
+    .num_journal{
+        text-align: center;
+        margin: 5px;
+        padding: 10px 0;
+        font-size: 30px;
     }
 }
-
-@media (max-width: 653px) {
-    .cards{
-        grid-template-columns: 1fr
-    }
-    .findf{
-        width: 90%;
-        padding: 0 15px;
-    }
-}
-
-@media (max-width: 485px) {
-    .container2{
-        height: 800px;
-    }
-}
-
