--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,5 @@
 .footer__container{
-    margin-top: 70px;
-    width: 100%;
-    height: 190px;
+    min-height: 190px;
     background: #332e29;
     color: #fff;
     padding: 40px;
@@ -13,12 +11,27 @@
 }
 .about{
     font-style: italic;
+    
+}
+.adress{
     font-size: 20px;
 }
 .made{
     font-size: 11px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     align-items: center;
     margin: 10px;
+}
+
+@media (max-width: 705px){
+    .footer__container{
+        padding: 15px;
+    }
+    .about{
+        font-size: 16px;
+    }
+    .adress{
+        font-size: 16px;
+    }
 }
