--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -1,38 +1,34 @@
 .main_container{
-    margin-top: 350px;
+    margin-top: 50px;
     color: #332e29;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+.cards_container{
+    width: 100%;
+}
 .main_container h2{
-    font-size: 60px;
+    font-size: 35px;
     text-transform: uppercase;
     font-weight: 800;
-    margin: 30px;
+    margin: 20px;
     text-align: center;
 }
-.cards_container{
-    display: flex;
-    justify-content: space-between;
+@media (max-width: 600px){
+    .main_container{
+        margin-top: 5px;
+    }
+    .main_container h2{
+        font-size: 30px;
+        font-weight: 700;
+        margin: 5px;
+    }
 }
 
-@media(max-width: 1550px){
+@media (max-width: 330px){
     .main_container{
-        margin-top: 280px;
-    }
-    .main_container h2{
-        font-size: 45px;
-        letter-spacing: 1px;
+        margin-top: 60px;
     }
 }
-@media (max-width: 905px) { 
-    .main_container{
-        margin-top: 400px;
-    }
-    .main_container h2{
-        font-size: 35px;
-        margin: 20px 5%;
-    }
- }
