--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -60,7 +60,7 @@
     width: 222px;
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: column;
     font-weight: 700; 
 }
